--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -3,24 +3,16 @@
 @tailwind utilities;
 
 html {
-  background-color: #000107;
+  background-color: #080808;
   scroll-behavior: smooth;
-  background-image: url('../public/grid.png');
   cursor: pointer;
 }
 
+.max-width {
+  width: min(120ch, 100% - 4rem);
+  margin-inline: auto;
+}
 
-.text-glow {
-  text-shadow: 0 0 12px rgba(0, 123, 255, 0.8), 0 0 24px rgba(0, 123, 255, 0.8);
-}
-.text-glow-green {
-  text-shadow: 0 0 12px rgba(0, 255, 0, 0.8), 0 0 24px rgba(17, 255, 0, 0.8);
-}
-.border-gradient-to-r {
-  border-image-slice: 1;
-  border-width: 4px;
-  border-image-source: linear-gradient(to right, var(--tw-gradient-stops));
-}
 
 /* width */
 ::-webkit-scrollbar {
